# fils

./: .gitignore  Anchor.toml  Cargo.toml  GRANT_APPLICATION.md  README.md  ROADMAP.md  _typos.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/demo/: next.config.ts  package.json
apps/demo/app/: globals.css  layout.tsx  page.tsx
apps/demo/app/api/checkout/: route.ts
apps/demo/app/api/dev/simulate/: route.ts
apps/demo/app/api/invoice/[reference]/: route.ts
apps/demo/app/api/status/[reference]/: route.ts
apps/demo/lib/: i18n.ts  menu.ts
apps/demo/lib/server/: state.ts
docs/: competitive-landscape.md  confidential.md  issuer-brief.md  playbook.md  thesis.md  workshop.md
programs/daed-gate/: Cargo.toml  README.md
programs/daed-gate/src/: lib.rs
programs/daed-hook/: Cargo.toml  README.md
programs/daed-hook/src/: lib.rs
