[package]
name = "daed-gate"
version = "0.1.0"
description = "Attestation-gated permissionless thaw for a default-frozen AED payment token (Token ACL / sRFC37 pattern)"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "daed_gate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token_2022_extensions"] }
solana-attestation-service-client = "1.0.9"
