[package]
name = "daed-hook"
version = "0.1.0"
description = "Token-2022 transfer-hook allowlist program: a licensed-holder perimeter for a regulated AED payment token"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "daed_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token_2022_extensions"] }
spl-discriminator = "0.5.2"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"
